fixing vertical alignment

--- a/htdocs/t/cocktail.css
+++ b/htdocs/t/cocktail.css
@@ -127,15 +127,9 @@ a.author.active { border-bottom: 1px dashed; cursor: pointer; }
 #top-menu .border-links a:hover b { border-color: #0392f1; }
 #top-menu .border-links a:hover { text-decoration:none}
 
-.hreview .content { position: relative; min-height: 200px; }
-.hreview .desc{font-size:120%;overflow:hidden;line-height:1.25;}
-.hreview .desc h2{position:relative;font-size:14px;font-weight:bold;padding:0 0 12px 16px;}
-.hreview .desc h2 i { position: absolute; left: -5px; top: 4px; width: 16px; height: 10px; background-position: -420px -25px; }
-.hreview .desc .description { padding-left: 16px; }
-.hreview .tags{font-size:110%;padding:29px 0 38px 0;}
-.hreview button { margin-right: 16px; }
+.hreview .content { position: relative; min-height: 200px; margin-bottom: 25px; }
 
-#cocktail-image { position: absolute; left: -2px; bottom: -20px; z-index: 1; }
+#cocktail-image { position: absolute; left: -2px; bottom: -33px; z-index: 1; }
 
 
 #main-content,
@@ -157,6 +151,15 @@ a.author.active { border-bottom: 1px dashed; cursor: pointer; }
 #show-legend { cursor: pointer; }
 
 #main-content { padding: 20px 0 0 220px; }
+#main-content .description { font-size: 120%; line-height: 1.25; }
+#main-content .description h2 { position: relative; font-size: 14px; font-weight: bold; padding: 0 0 12px 16px; }
+#main-content .description h2 i { position: absolute; left: -5px; top: 4px; width: 16px; height: 10px; background-position: -420px -25px; }
+#main-content .description .short-legend { padding-left: 16px; }
+#main-content .tags{font-size:110%;padding:29px 0 38px 0;}
+#main-content .buttons { position: absolute; bottom: 0; }
+#main-content .buttons button { margin-right: 16px; }
+#main-content .buttons button .the-name { display: none; }
+
 
 #view-legend { font-size: 120%; line-height: 1.5; padding: 13px 10px 0 10px; overflow: hidden; }
 #view-legend h3 { font-size: 150%; margin-bottom: 10px; }
@@ -228,10 +231,6 @@ a.author.active { border-bottom: 1px dashed; cursor: pointer; }
 .hreview .menu p {zoom:1}
 
 .b-content{width:590px;}
-
-.hreview .desc{width:365px;}
-.hreview .desc h2 i { left: -20px; }
-.hreview button{float:left;}
 
 #view-legend button{bottom:-50px;}
 
